Issue CXDEVII-1834: Align user puppet icon with the others in the mobile menu.

--- a/aegon-sass-library/base/_icon.scss
+++ b/aegon-sass-library/base/_icon.scss
@@ -4,6 +4,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding-right: 8px;
+  display: inline-block;
+  min-width: 1.5em;
 }
 
 .icon-uniE600:before {
